Added Shell autocomplete for edit cli command via autocomplete_existing_task()

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 v0.2.1a
 Changed the config file to use absolute paths in order to be able to run the program from anywhere
 Added check for copying a file to itself, instead of obliterating the data
+Addded Shell autocomplete to edit command
 
 v0.2.0a
 Changed help for -desc in commands "add" and "list"
